--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 {% block heading %}Create an Account{% endblock %}
 
 {% block content %}
-  <form name="register" action="/register" method="post">
+  <form name="register" action="{{ url_for('register') }}" method="post">
     <input type="username" name="username" placeholder="Username" required>
     <input type="password" name="password" placeholder="Password" required>
     <input type="submit" value="Register">
