--- a/templates/register.html
+++ b/templates/register.html
@@ -1,14 +1,11 @@
 {% extends '__base.html' %}
+{% import '_forms.html' as forms %}
 
 {% block title %}Register{% endblock %}
 {% block heading %}Create an Account{% endblock %}
 
 {% block content %}
-  <form name="register" action="{{ url_for('register') }}" method="post">
-    <input type="username" name="username" placeholder="Username" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <input type="submit" value="Register">
-  </form>
+  {{ forms.register() }}
 
   <br><hr>
   Already have an account? <a href="{{ url_for('login') }}">Log in.</a>
