--- a/templates/friends.html
+++ b/templates/friends.html
@@ -1,5 +1,5 @@
 {% extends '__base.html' %}
-{% import '_macros.html' as macros %}
+{% import '_utils.html' as utils %}
 
 {% block title %}Friends{% endblock %}
 {% include '_header.html' %}
@@ -8,5 +8,5 @@
 
 {% block content %}
   <hr><hr>
-  {{ macros.show_users(friends) }}
+  {{ utils.show_users(friends) }}
 {% endblock %}
