--- a/templates/login.html
+++ b/templates/login.html
@@ -9,4 +9,6 @@
 
   <br><hr>
   <a href="{{ url_for('register') }}">Create an account</a>
+  <br>
+  <a href="{{ url_for('deactivate') }}">Delete your account</a> instead.
 {% endblock %}
