'log_in' --> 'login'

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 {% block heading %}Log in{% endblock %}
 
 {% block content %}
-  {{ forms.log_in() }}
+  {{ forms.login() }}
 
   <br><hr>
   <a href="{{ url_for('register') }}">Create an account</a>
