--- a/templates/_forms.html
+++ b/templates/_forms.html
@@ -6,8 +6,8 @@
   </form>
 {% endmacro %}
 
-{% macro log_in() %}
-  <form name="log_in" action="{{ url_for('log_in') }}" method="post">
+{% macro login() %}
+  <form name="login" action="{{ url_for('login') }}" method="post">
     <input type="username" name="username" placeholder="Username" required>
     <input type="password" name="password" placeholder="Password" required>
     <input type="submit" value="Login">
