Useless changes to the UI ༼ ºل͟º༼ ºل͟º ༽ºل͟º ༽ºل͟º ༽

--- a/templates/_forms.html
+++ b/templates/_forms.html
@@ -31,7 +31,7 @@
 {% macro save_post() %}
   <form name="savepost" action="{{ url_for('post' )}}" method="post" style="display:inline;">
     <input type="text" name="text" size="140" maxlength="140" placeholder="Write a new post">
-    <input type="submit" name="savepost" value="Save">
+    <input type="submit" name="savepost" value="(°ロ°)☝ Save">
   </form>
 {% endmacro %}
 
