--- a/web/main/templates/_forms.html
+++ b/web/main/templates/_forms.html
@@ -29,7 +29,7 @@
 {% endmacro %}
 
 {% macro save_post() %}
-  <form name="savepost" action="{{ url_for('post' )}}" method="post" style="display:inline;">
+  <form name="savepost" action="{{ url_for('post') }}" method="post" style="display:inline;">
     <input type="text" name="text" size="140" maxlength="140" placeholder="Write a new post">
     <input type="submit" name="savepost" value="(°ロ°)☝ Save">
   </form>
@@ -39,6 +39,13 @@
   <form name="deletepost" action="{{ url_for('post') }}" method="post" style="display:inline;">
     <input type="text" name="timestamp" value={{ timestamp }} hidden>
     <input type="submit" name="deletepost" value="Delete">
+  </form>
+{% endmacro %}
+
+{% macro search_profile() %}
+  <form name="search_profile" action="{{ url_for('profile') }}" method="get" style="display:inline;">
+    <input type="text" name="requested_username" placeholder="Search username...">
+    <input type="submit" value="Search">
   </form>
 {% endmacro %}
 
